Version 1.2 added opening Link